api company employee

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost/qltoanha
 spring.datasource.username=root
-spring.datasource.password=Dontbetoohumble1234!
+spring.datasource.password=thanhcong200
 spring.datasource.initialization-mode=always
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.generate-ddl=true
